# Daily_Energy_Coach

./: .env.example  .gitignore  README.md  app.js  app.py  architecture.md  audit.mjs  context.md  database.py  development_plan.md  edge-case.md  figmamake.md  implementation.md  implementation_plan.md  index.html  oauth_audit_report.md  package.json  parser.mjs  problemstatement.txt  requirements.txt  scheduler.mjs  scheduler.py  server.mjs  start.mjs  style.css  verify_part2_part3.mjs  verify_phase1.mjs  verify_phase2.mjs  verify_phase3.mjs  verify_phase4.mjs  verify_phase5.mjs  walkthrough.md
.streamlit/: config.toml
client/: index.html  package-lock.json
client/src/: App.jsx  index.css
docs/: deployment-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: tray.html
