[package]
name = "ebb-tray"
version = "0.1.0"
description = "Ebb System Tray Widget"
authors = ["Ebb Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
